--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,19 @@
     <groupId>Agency</groupId>
     <artifactId>Agency</artifactId>
     <version>1.0-SNAPSHOT</version>
-        <packaging>war</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>war</packaging>
 
         <name>Agency</name>
         <!-- FIXME change it to the project's website -->
@@ -95,7 +107,7 @@
             <dependency>
                 <groupId>org.webjars</groupId>
                 <artifactId>bootstrap</artifactId>
-                <version>$5.0.0</version>
+                <version>5.0.0</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.webjars</groupId>
